<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--might have to use a recycler view to load in data efficiently-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurant_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/restaurant_name"
                android:textColor="#000000"
                android:textSize="20dp" />

            <!--restaurant details section-->
            <LinearLayout
                android:layout_width="368dp"
                android:layout_height="125dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <ImageView
                    android:id="@+id/restaurant_main_image"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tacos" />

                <!--restaurant information -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/restaurant_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_restaurant_location"
                        android:drawablePadding="5dp"
                        android:text="@string/restaurant_address" />

                    <TextView
                        android:id="@+id/restaurant_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_restaurant_phone"
                        android:drawablePadding="5dp"
                        android:text="@string/restaurant_phonenum" />

                    <TextView
                        android:id="@+id/restaurant_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_restaurant_clock"
                        android:drawablePadding="5dp"
                        android:text="@string/restaurant_hours_m" />

                    <TextView
                        android:id="@+id/restaurant_delivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_restaurant_delivery"
                        android:drawablePadding="5dp"
                        android:text="@string/restaurant_delivers" />
                </LinearLayout>

            </LinearLayout>

            <!--popular dishes section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteY="37dp">

                <TextView
                    android:id="@+id/rest_pop_dish_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Popular Dishes"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <!--dishes section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rest_dishes_tile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:text="Dishes" />

                    <Button
                        android:id="@+id/rest_dish_filter_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@null"
                        android:drawableLeft="@drawable/ic_restaurant_filter"
                        android:text="Filter" />

                </RelativeLayout>

                <!--card for menu item-->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/rest_dish_image"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            app:srcCompat="@color/colorPrimary" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_margin="15dp">

                            <TextView
                                android:id="@+id/rest_dish_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/restaurant_dish_name"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                android:gravity="center" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:gravity="bottom">

                                <TextView
                                    android:id="@+id/rest_avg_rating"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:drawableLeft="@drawable/ic_restaurant_heart"
                                    android:drawablePadding="5dp"
                                    android:text="@string/restaurant_dish_rating"/>

                                <TextView
                                    android:id="@+id/rest_avg_recommendation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/restaurant_dish_recommendation"
                                    android:layout_marginLeft="10dp"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Additional menu item UI fillers just to see what it will look like-->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            app:srcCompat="@color/colorPrimary" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_margin="15dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/restaurant_dish_name"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                android:gravity="center" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:gravity="bottom">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:drawableLeft="@drawable/ic_restaurant_heart"
                                    android:drawablePadding="5dp"
                                    android:text="@string/restaurant_dish_rating"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/restaurant_dish_recommendation"
                                    android:layout_marginLeft="10dp"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:layout_weight="1"
                            app:srcCompat="@color/colorPrimary" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:layout_margin="15dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/restaurant_dish_name"
                                android:textSize="20dp"
                                android:textStyle="bold"
                                android:textColor="#000000"
                                android:gravity="center" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:gravity="bottom">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:drawableLeft="@drawable/ic_restaurant_heart"
                                    android:drawablePadding="5dp"
                                    android:text="@string/restaurant_dish_rating"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/restaurant_dish_recommendation"
                                    android:layout_marginLeft="10dp"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>




            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>