<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--custom nav bar toolbar-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

            <!--scroll layout or linear layout-->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/restaurant_title_line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@+id/restaurant_details_section"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/restaurant_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/restaurant_name"
                            android:textColor="#000000"
                            android:textSize="20dp"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:id="@+id/restaurant_edit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:onClick="goToEditRestaurant"
                            app:srcCompat="@drawable/ic_edit" />

                    </RelativeLayout>


                    <!--restaurant details section-->
                    <LinearLayout
                        android:id="@+id/restaurant_details_section"
                        android:layout_width="368dp"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="8dp"
                        android:layout_margin="10dp"
                        app:layout_constraintBottom_toTopOf="@+id/restaurant_popular_section"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/restaurant_title_line">

                        <ImageView
                            android:id="@+id/restaurant_main_image"
                            android:layout_width="125dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/tacos" />

                        <!--restaurant information -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/restaurant_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_restaurant_location"
                                android:drawablePadding="5dp"
                                android:text="@string/restaurant_address" />

                            <TextView
                                android:id="@+id/restaurant_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_restaurant_phone"
                                android:drawablePadding="5dp"
                                android:text="@string/restaurant_phonenum" />

                            <TextView
                                android:id="@+id/restaurant_hours"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_restaurant_clock"
                                android:drawablePadding="5dp"
                                android:text="@string/restaurant_hours_m" />

                            <TextView
                                android:id="@+id/restaurant_delivery"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_restaurant_delivery"
                                android:drawablePadding="5dp"
                                android:text="@string/restaurant_delivers" />

                            <Button
                                android:id="@+id/add_fav_rest_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Add to Favorites" />

                        </LinearLayout>

                    </LinearLayout>

                    <!--popular dishes section-->
                    <LinearLayout
                        android:id="@+id/restaurant_popular_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp"
                        app:layout_constraintBottom_toTopOf="@+id/restaurant_dishes_section"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_section" >

                        <TextView
                            android:id="@+id/rest_pop_dish_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Popular Dishes"/>

                        <!--3 dish cards for the top 3 most popular dishes for this restaurant-->
                        <!--reuse the dish recycler-->
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/restaurant_popular_recycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <!--dishes section-->
                    <LinearLayout
                        android:id="@+id/restaurant_dishes_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/restaurant_popular_section">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/rest_dishes_tile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:text="Dishes" />

                            <Button
                                android:id="@+id/rest_dish_filter_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:background="@null"
                                android:drawableLeft="@drawable/ic_restaurant_filter"
                                android:text="Filter"
                                android:onClick="showFilterPopup"/>

                        </RelativeLayout>

                        <!--recycler view for dish cards-->
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/restaurant_dishes_recycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </android.support.constraint.ConstraintLayout>
            </ScrollView>
        </LinearLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemTextColor="@color/darkgray"
        app:itemIconTint="@color/darkgray"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>